--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,12 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>forecast_market</name>
-	<url>http://maven.apache.org</url>
+	<name>Forecast Market</name>
+	<url>https://github.com/fukuyama/forecast_market/wiki</url>
+	<description>予測市場 (Forecast Market) Webアプリケーション</description>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>MS932</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -31,7 +32,7 @@
 				<version>3.0-beta-3</version>
 				<configuration>
 					<locales>ja</locales>
-					<inputEncoding>ShiftJIS</inputEncoding>
+					<inputEncoding>MS932</inputEncoding>
 					<outputEncoding>UTF-8</outputEncoding>
 				</configuration>
 			</plugin>
@@ -39,6 +40,19 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>2.3.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.8</version>
+				<executions>
+					<execution>
+						<phase>test</phase>
+						<goals>
+							<goal>report-only</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -68,6 +82,11 @@
 						</reports>
 					</reportSet>
 				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.4</version>
 			</plugin>
 		</plugins>
 	</reporting>
