--- a/pom.xml
+++ b/pom.xml
@@ -112,13 +112,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.8</version>
-  <reportSets>
-    <reportSet>
-      <reports>
-        <report>report-only</report>
-      </reports>
-    </reportSet>
-  </reportSets>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report-only</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -142,26 +142,23 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.4</version>
-  <configuration>
-    <formats>
-      <format>xml</format>
-      <format>html</format>
-    </formats>
-  </configuration>
+				<configuration>
+					<formats>
+						<format>xml</format>
+						<format>html</format>
+					</formats>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.6</version>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<show>public</show>
+				</configuration>
 			</plugin>
 		</plugins>
 	</reporting>
 
-<!--
-入れたいプラグイン
-taglist
-release
-javadoc
-
--->
+	<!-- 入れたいプラグイン taglist release -->
 </project>
