--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 					<locales>ja</locales>
 					<inputEncoding>MS932</inputEncoding>
 					<outputEncoding>UTF-8</outputEncoding>
+					<stagingSiteURL>${project.distributionManagement.site.url}</stagingSiteURL>
 				</configuration>
 			</plugin>
 			<plugin>
