--- a/forecast_market/pom.xml
+++ b/forecast_market/pom.xml
@@ -24,7 +24,7 @@
 		</developer>
 		<developer>
 			<id>imamura</id>
-			<name>Yousuke Imamra</name>
+			<name>Yousuke Imamura</name>
 			<email>wayne.dif@gmail.com</email>
 			<url></url>
 		</developer>
