--- a/forecast_market/pom.xml
+++ b/forecast_market/pom.xml
@@ -80,10 +80,20 @@
 				<version>2.8</version>
 				<configuration>
 					<additionalBuildcommands>
-						<buildcommand>com.atlassw.tools.eclipse.checkstyle.CheckstyleBuilder</buildcommand>
+						<buildCommand>
+							<name>net.sf.eclipsecs.core.CheckstyleBuilder</name>
+							<arguments>
+							</arguments>
+						</buildCommand>
+						<buildCommand>
+							<name>org.eclipse.m2e.core.maven2Builder</name>
+							<arguments>
+							</arguments>
+						</buildCommand>
 					</additionalBuildcommands>
 					<additionalProjectnatures>
-						<projectnature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</projectnature>
+						<projectnature>net.sf.eclipsecs.core.CheckstyleNature</projectnature>
+						<projectnature>org.eclipse.m2e.core.maven2Nature</projectnature>
 					</additionalProjectnatures>
 					<additionalConfig>
 						<file>
@@ -99,6 +109,9 @@
   <fileset name="all" enabled="true" check-config-name="checkstyle" local="true">
     <file-match-pattern match-pattern="." include-pattern="true"/>
   </fileset>
+  <filter name="FilesFromPackage" enabled="true">
+    <filter-data value="src/test/java"/>
+  </filter>
   <filter name="NonSrcDirs" enabled="true"/>
 </fileset-config>
 ]]>
